// =============================================================================
// customer-service / customer_db
// Spring microservice database boundary: customer-service
//
// FK politikasi:
//   * Servis ICI iliskiler fiziksel FK ile kurulur ('ref:' notasyonu).
//   * Servis DISI referanslar (identityUserId, uploadedByUserId, authorUserId
//     vb.) yalnizca UUID olarak tutulur; fiziksel FK YOKTUR, 'logical ref'
//     notlari ile isaretlenir.
//   * Outbox tablosunun aggregateId alani jenerik oldugundan FK uygulanmaz.
// =============================================================================

Table CUSTOMER_SERVICE_CUSTOMER {
  id uuid [primary key]
  identityUserId uuid [unique, note: 'logical ref -> identity-service.USER.id']
  customerNumber varchar [unique]
  customerType varchar [note: 'INDIVIDUAL | CORPORATE']
  firstName varchar
  lastName varchar
  companyName varchar
  taxNumber varchar
  nationalId varchar [note: 'Encrypted TCKN/VKN']
  dateOfBirth date
  segment varchar [note: 'MASS | SME | CORPORATE | VIP']
  status varchar [note: 'PROSPECT | ACTIVE | SUSPENDED | CLOSED']
  createdAt timestamp
  updatedAt timestamp
  deletedAt timestamp [note: 'Soft delete (KVKK/GDPR)']
}

Table CUSTOMER_SERVICE_ADDRESS {
  id uuid [primary key]
  customerId uuid [not null]
  addressType varchar [note: 'BILLING | SHIPPING | CONTACT']
  country varchar
  city varchar
  district varchar
  street varchar
  buildingNo varchar
  postalCode varchar
  isDefault boolean
  createdAt timestamp
  updatedAt timestamp
}

Table CUSTOMER_SERVICE_CONTACT {
  id uuid [primary key]
  customerId uuid [not null]
  contactType varchar [note: 'EMAIL | PHONE | MOBILE']
  contactValue varchar
  isVerified boolean
  isPrimary boolean
  verifiedAt timestamp
  createdAt timestamp
}

Table CUSTOMER_SERVICE_DOCUMENT {
  id uuid [primary key]
  customerId uuid [not null]
  documentType varchar [note: 'ID_CARD | PASSPORT | CONTRACT | TAX_CERT']
  documentNumber varchar
  fileUrl varchar
  verificationStatus varchar [note: 'PENDING | VERIFIED | REJECTED']
  uploadedByUserId uuid [note: 'logical ref -> identity-service.USER.id']
  uploadedAt timestamp
  verifiedAt timestamp
}

Table CUSTOMER_SERVICE_NOTE {
  id uuid [primary key]
  customerId uuid [not null]
  authorUserId uuid [note: 'logical ref -> identity-service.USER.id']
  noteText text
  createdAt timestamp
}

Table CUSTOMER_SERVICE_CONSENT {
  id uuid [primary key]
  customerId uuid [not null]
  consentType varchar [note: 'KVKK | MARKETING | DATA_SHARING']
  channel varchar [note: 'EMAIL | SMS | CALL']
  isGranted boolean
  grantedAt timestamp
  revokedAt timestamp
}

Table CUSTOMER_SERVICE_AUDIT_LOG {
  id uuid [primary key]
  actorUserId uuid [note: 'logical ref -> identity-service.USER.id']
  action varchar
  entityType varchar
  entityId uuid
  oldValueJson jsonb
  newValueJson jsonb
  correlationId varchar
  createdAt timestamp
}

Table CUSTOMER_SERVICE_OUTBOX_EVENT {
  id uuid [primary key]
  aggregateId uuid [note: 'soft ref - heterojen aggregate tipleri, FK YOK']
  aggregateType varchar
  eventType varchar
  payloadJson jsonb
  status varchar [note: 'PENDING | PUBLISHED | FAILED']
  createdAt timestamp
  publishedAt timestamp
}

Table CUSTOMER_SERVICE_PROCESSED_EVENT {
  id uuid [primary key]
  eventId uuid [unique]
  eventType varchar
  sourceService varchar
  aggregateId uuid
  processedAt timestamp
  status varchar [note: 'PROCESSED | FAILED']
  errorMessage varchar
  createdAt timestamp
}

// --- Servis ici fiziksel FK iliskileri ---
Ref customer_addresses:  CUSTOMER_SERVICE_ADDRESS.customerId  > CUSTOMER_SERVICE_CUSTOMER.id  // N-1, physical FK; CUSTOMER 1-N ADDRESS
Ref customer_contacts:   CUSTOMER_SERVICE_CONTACT.customerId  > CUSTOMER_SERVICE_CUSTOMER.id  // N-1, physical FK; CUSTOMER 1-N CONTACT
Ref customer_documents:  CUSTOMER_SERVICE_DOCUMENT.customerId > CUSTOMER_SERVICE_CUSTOMER.id  // N-1, physical FK; CUSTOMER 1-N DOCUMENT
Ref customer_notes:      CUSTOMER_SERVICE_NOTE.customerId     > CUSTOMER_SERVICE_CUSTOMER.id  // N-1, physical FK; CUSTOMER 1-N NOTE
Ref customer_consents:   CUSTOMER_SERVICE_CONSENT.customerId  > CUSTOMER_SERVICE_CUSTOMER.id  // N-1, physical FK; CUSTOMER 1-N CONSENT
